# ConnectFour

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ConnectFour/: CMakeLists.txt  ConnectFour.cpp  NeuralNet.cpp  NeuralPlayer.cpp  Players.cpp
ConnectFour/Public/: ConnectFour.hpp  NeuralPlayer.hpp  Players.cpp  Players.hpp  neuralNet.hpp
ConnectFourApp/: Board.cpp  Board.h  CMakeLists.txt  Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  main.cpp
ConnectFourCL/: CMakeLists.txt  IniFile.cpp  NeuralPlayer.hpp  collectResult.cpp  collectResult.cpp~RF18a9a24.TMP  collectResult.hpp  collectResult.hpp~RF100b31d.TMP  main.cpp  main.cpp~RF53168d.TMP  neuralNet.cpp  neuralNet.hpp  neuralPlayer.cpp  outputResult.cpp  outputResult.hpp  selectPlayer.cpp  selectPlayer.hpp  test.ini
ConnectFourTF/: CMakeLists.txt  _design.md  brett.cpp  brett.cpp~RF109ed50.TMP  brett.cpp~RF10c86ff.TMP  brett.cpp~RF10d565e.TMP  brett.cpp~RF11300ef.TMP  brett.cpp~RF76149b.TMP  brett.cpp~RF77fb7f.TMP  brett.cpp~RF7f3545.TMP  brett.cpp~RF80cadf.TMP  brett.cpp~RF80ed3d.TMP  brett.cpp~RF86b665.TMP  brett.cpp~RF874490.TMP  brett.cpp~RF87a0a4.TMP  brett.cpp~RF8844ee.TMP  brett.cpp~RFfb30f3.TMP  brett.cpp~RFfb6d38.TMP  brett.hpp  brett.hpp~RF763573.TMP  brett.hpp~RFfe103a.TMP  brettBasis.cpp  brettBasis.hpp  brettExtended.cpp  brettExtended.hpp  createTrainingFile.cpp  createTrainingFile.hpp  main.cpp  neuralNet.hpp  patternOutput.cpp  patternOutput.hpp  snapshot.cpp  snapshot.cpp~RF7c367c.TMP  snapshot.cpp~RFa094c3.TMP  snapshot.hpp  snapshot.hpp~RF7be61c.TMP  stdafx.cpp
ConnectFourTest/: CMakeLists.txt  ConnectFourTest.cpp  GameTest.cpp  TestSituations.cpp
DLL/: CMakeLists.txt  MBDllWrapper.java  MemBrainDll.lib  MemBrainDll64.lib  MemBrainDll64_NoStdCall.lib  MemBrainDll_NoStdCall.lib  MemBrain_inc.h  VBDeclarations.txt  cmake_install.cmake
NeuralNetwork/: ConnectFour.csv  InitialConnectFour.csv  InitialConnectFour.mbl  XOR.01.csv  net01_red.csv  net01_red.mbn  net01_yellow.csv  net01_yellow.mbn  net02_red.csv  net02_red.mbn  net02_yellow.csv  net03_red.mbn  pattern.csv  test - Copy.ini  test.ini  xor.mbn  xor_01.mbl
