project(ConnectFour)
cmake_minimum_required(VERSION 3.0)

add_definitions(-DGSL_THROW_ON_CONTRACT_VIOLATION)
if (WIN32)
  add_definitions(-D_SCL_SECURE_NO_WARNINGS)
else()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
endif()

add_subdirectory(memory)
add_subdirectory(ConnectFour)
add_subdirectory(ConnectFourTest)
add_subdirectory(ConnectFourApp)
add_subdirectory(ConnectFourCL)